# tgflightsfromnyc

./: .env.example  .env.railway.example  .env.supabase.example  .gitignore  AGENTS.md  ALIGNMENT_CONFIRMED.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  COMPLETE_ROADMAP.md  DEAL_AWARENESS_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.worker  FINALIZE_SUMMARY.md  JMX-2025-Oct-05-1.11.6.pm.mid  LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  LAUNCH_READY.md  MILESTONES.md  Makefile  ONE_BUTTON_SHIP.md  PHASE3_COMPLETE.md  PRODUCTION_PLAYBOOK.md  PRODUCTION_SPEC.md  QUICKSTART.md  RAILWAY_QUICKSTART.md  README.md  README_DEPLOY.md  README_DEPLOY_SUPABASE.md  README_IMPORT.md  RECOMMENDATIONS.md  SERP_RADIO_ARCHITECTURE.md  STATUS.md  VIBENET.md  caribbean_top_destinations.csv  caribbean_top_queries.csv  google_us_flights-from-jfk-fli_matching-terms_2025-08-16_12-05-21.csv  inventory_mapping_helper.json  prompts_flights_nyc_plus_caribbean.json  pyproject.toml  (+19 more)
.claude/: settings.local.json
agents/: agent_manifest.yaml  formatting_qa_agent.py
completed/: 2025-08-03T174139Z.midi  DEPLOYMENT.md  DEPLOYMENT_READY.md  JUMP_RIFF_IMPLEMENTATION.md  Makefile  PHASE_FINISH_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  TODO.md  TRAINING_SYSTEM_COMPLETE.md  analyze_baseline.py  classify_momentum.py  cli.py  debug-502-main-api.md  debug-iframe-deployment.md  env.production.example  env.template  extract_bars.py  extract_motifs.py  fetch_metrics.py  label_bars.py  labeled_bars.json  lovable-iframe.html  map_to_controls.py  motif_selector.py  motifs_catalog.json  (+9 more)
(+1002 files in other folders)
